--- a/src/app/pages/avaliacoes/avaliacoes.component.html
+++ b/src/app/pages/avaliacoes/avaliacoes.component.html
@@ -57,7 +57,9 @@
     <dxi-column dataField="livroTitulo" width="20%">
       <dxo-lookup [dataSource]="livros" displayExpr="titulo" valueExpr="titulo"></dxo-lookup>
     </dxi-column>
-    <dxi-column dataField="nota" width="5%" alignment="center"></dxi-column>
+    <dxi-column dataField="nota" width="5%" alignment="center">
+      <dxo-lookup [dataSource]="notas"></dxo-lookup>
+    </dxi-column>
     <dxi-column dataField="titulo" width="15%"></dxi-column>
     <dxi-column dataField="comentario"></dxi-column>
 
