--- a/src/app/pages/autores/autores.component.html
+++ b/src/app/pages/autores/autores.component.html
@@ -8,8 +8,7 @@
     [showRowLines]="true"
     [showBorders]="true"
     (onSaved)="onSavedAutor($event)"
-    (onRowRemoving)="popupConfirmacaoDelete($event)"
-  >
+    (onRowRemoving)="popupConfirmacaoDelete($event)">
 
     <!-- COLUNAS DA LISTA -->
     <dxi-column dataField="id" width="5%" alignment="center"></dxi-column>
