Path alterado para projeto-livros-back.onrender.com

--- a/src/app/pages/autores/autores.component.html
+++ b/src/app/pages/autores/autores.component.html
@@ -44,7 +44,8 @@
         </dxi-item>
 
         <!-- BIOGRAFIA -->
-        <dxi-item dataField="biografia" [height]="700" [editorType]="'dxTextArea'" [editorOptions]="{ height: 150, maxLength: 250 }">
+        <dxi-item dataField="biografia" [height]="700" [editorType]="'dxTextArea'"
+                  [editorOptions]="{ height: 150, maxLength: 250 }">
           <dxi-validation-rule type="required" message="Biografia é obrigatória"></dxi-validation-rule>
         </dxi-item>
       </dxo-form>
